Concise commit message:
```text
build: downgrade JVM toolchain to 21 and standardize Java compilation

- Update root `build.gradle.kts` and `GenesisJvmConfig.kt` to target Java 21 instead of Java 25.
- Simplify `KotlinCompile` configuration by setting `jvmTarget` to `JVM_21` directly for all modules.
- Refactor `JavaCompile` tasks to use `JavaToolchainService` for setting the compiler version instead of manual compiler arguments.
- Remove `--enable-preview` and explicit `--release` flags from Java compilation options.
```